assets/responsive.css
/* PC */
@media (min-width: 992px) {
    .header {
        display: block;
    }

    .mobile-header,
    .menu-overlay,
    .menu-drawer,
    .menu-checkbox {
        display: none;
    }
}

/* Tablet & Mobile */
@media (max-width: 991.98px) {
    .header {
        display: none;
    }

    .mobile-header {
        position: sticky;
        top: 0;
        background: #fbfaff;
        backdrop-filter: blur(15px);
        z-index: 10;
    }

    .header__container {
        width: min(
            100%,
            calc(100% - 20px)
        ); /* Ensure the container doesn't exceed the viewport width */
    }

    .mobile-header__inner {
        display: flex;
        align-items: center;
        justify-content: space-between;
        border-bottom: 1px solid #d6d3e2;
    }

    .mobile-header__actions {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 10px;
    }

    .mobile-header__emoji {
        display: block;
        height: auto;
        pointer-events: none;
    }

    .header__email-btn {
        display: flex;
        justify-content: center;
        align-items: center;
        border: 1px solid rgba(93, 59, 238, 0.2);
        border-radius: 50%;
    }

    .header__icon-email {
        width: 16.696px;
        height: 11.13px;
        object-fit: contain;
    }

    .toggle-menu {
        display: inline-flex; /* Use inline-flex to prevent it from taking full width */
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 4px;
        border: 1px solid rgba(93, 59, 238, 0.2);
        border-radius: 50%;
        background: transparent;
        cursor: pointer;
    }

    .menu-overlay {
        position: fixed; /* Use fixed to cover the entire viewport */
        inset: 0; /* Shorthand for top: 0; right: 0; bottom: 0; left: 0; */
        background: rgba(0, 0, 0, 0.3);
        opacity: 0; /* Start hidden */
        visibility: hidden; /* Hide from screen readers and prevent interaction */
        transition:
            opacity 0.5s ease,
            visibility 0.5s ease;
        z-index: 999; /* Ensure it is below the menu drawer but above other content */
    }

    .menu-drawer {
        position: fixed;
        top: 0;
        right: 0;
        z-index: 1000; /* Ensure it is above the menu overlay */
        height: 100vh; /* Full viewport height */
        background: #fff;
        transform: translateX(100%); /* Start off-screen to the right */
        transition: transform 0.5s ease;
    }

    .mobile-nav__list {
        display: flex;
        flex-direction: column;
        gap: 20px;
    }

    .mobile-nav__list .header__nav-item a {
        display: block;
        color: var(--color-text);
        font-size: 1.8rem;
        padding: 8px 0;
    }

    .menu-checkbox {
        position: fixed;
        opacity: 0;
        pointer-events: none;
    }

    .menu-checkbox:checked ~ .menu-overlay {
        /* Show the overlay when the menu is open */
        opacity: 1;
        visibility: visible;
    }

    .menu-checkbox:checked ~ .menu-drawer {
        /* Slide the menu drawer in when the menu is open */
        transform: translateX(0);
    }

    .hero__media-col {
        order: 2; /* Move the media column below the content column on smaller screens */
    }

    .hero__content-col {
        order: 1; /* Move the content column above the media column on smaller screens */
    }

    .hero {
        padding-top: 20px;
        overflow: hidden;
    }

    .hero__inner {
        row-gap: 20px;
    }

    .hero__content {
        margin-left: 0;
    }

    .clients {
        margin-top: 120px;
    }

    .clients__inner {
        flex-direction: column;
        gap: 0;
    }

    .clients__heading {
        padding-left: 0;
    }

    .clients__title {
        text-align: center;
    }

    .clients__line {
        position: static;
        display: block;
        margin: 0 auto 5px;
    }

    .clients__title {
        font-size: 2.8rem;
        max-width: 169px;
    }

    .clients__list {
        grid-template-columns: repeat(2, max-content);
        column-gap: 40px;
        row-gap: 36px;
        width: fit-content;
        margin: 43px auto 0;
    }

    .clients__item-name {
        white-space: nowrap;
    }

    .service {
        margin-top: 120px;
    }

    .service__title {
        font-size: 3.6rem;
        line-height: 1.1667; /* 116.667% */
        letter-spacing: -1.44px;
    }

    .service__desc {
        text-align: center;
        font-size: 1.6rem;
        line-height: 1.625; /* 162.5% */
    }

    .about {
        margin-top: 120px;
    }

    .about__heading {
        text-align: center;
    }

    .about__title {
        width: 300px;
        margin: 0 auto;
        font-size: 3.6rem;
        line-height: 1.1667; /* 116.667% */
        letter-spacing: -1.44px;
    }

    .about__desc {
        width: 350px;
        max-width: 100%;
        margin: 20px auto 0;
        font-size: 1.6rem;
        font-weight: 400;
        line-height: 1.625; /* 162.5% */
    }

    .about__list {
        margin: 60px 20px 0;
        row-gap: 20px;
    }

    .about__item {
        padding: 24px;
    }

    .about__item-title {
        font-size: 3.2rem;
        line-height: 1.25;
        letter-spacing: -1.28px;
    }

    .about__item-img {
        width: 180px;
    }

    .about__item-desc {
        width: 200px;
        margin-top: 10px;
        font-size: 1.6rem;
        line-height: 1.4375;
    }

    .about__item-more {
        margin-top: 20px;
        font-size: 1.8rem;
        line-height: 1.667;
    }

    .about__btn {
        margin: 50px auto 0;
    }
}

/* Mobile */
@media (max-width: 767.98px) {
    .mobile-header__inner {
        min-height: 60px;
    }

    .mobile-header__emoji {
        width: 37px;
    }

    .header__email-btn,
    .toggle-menu {
        width: 32px;
        height: 32px;
    }

    .menu-drawer {
        width: min(320px, 80%); /* Set a max width for the menu drawer */
        padding: 60px 24px 24px;
    }

    .about__title {
        width: 300px;
    }

    .about__desc {
        width: 318px;
    }

    .about__item {
        padding: 20px 15px;
    }

    .about__item-title {
        font-size: 2.4rem;
        line-height: 1.41667;
        letter-spacing: -0.96px;
        white-space: nowrap;
    }

    .about__item-img {
        width: 122px;
    }

    .about__item-desc {
        width: 176px;
        margin-top: 0;
        font-size: 1.4rem;
        line-height: 1.42857;
    }

    .about__item-more {
        margin-top: 0;
        font-size: 1.6rem;
        line-height: 1.75;
    }

    .hero__decor-small {
        display: none;
    }

    .hero__content {
        margin-left: 20px;
    }

    .hero__title {
        width: 260px;
        max-width: 100%;
        font-size: 4.2rem;
        line-height: 1.19; /* 119.048% */
        letter-spacing: -1.68px;
    }

    .hero__desc {
        width: 318px;
        max-width: 100%;
        font-size: 1.6rem;
        font-weight: 400;
        line-height: 1.625; /* 162.5% */
    }

    .hero__actions {
        margin-top: 30px;
    }

    .btn__primary {
        padding: 12px 31px;
        font-size: 1.6rem;
    }

    .hero__more-info {
        font-size: 1.6rem;
    }

    .hero__social-media {
        margin-top: 25px;
    }

    .hero__media {
        max-width: 259px;
        margin: 0 auto;
    }

    .hero__decor-big {
        max-width: 543.709px;
        bottom: -21%;
        left: -55%;
    }

    .service__slider {
        overflow: hidden; /* Hide the overflowing content */
    }

    .service__list {
        display: flex;
        flex-wrap: nowrap; /* Prevent the items from wrapping to the next line */
        row-gap: 0; /* Remove the vertical gap between items */
        transition: transform 0.4s ease; /* Add a transition for smooth sliding */
    }

    .service__list > .col-12,
    .service__list > .col-md-6,
    .service__list > .col-lg-4 {
        flex: 0 0 100%; /* Make each item take full width of the container */
        max-width: 100%; /* Ensure the item doesn't exceed the container width */
    }

    .service__dots {
        display: flex;
        justify-content: center;
        gap: 15px;
        margin-top: 30px;
    }

    .service__dot {
        position: relative;
        display: inline-flex;
        justify-content: center;
        align-items: center;
        width: 20px;
        height: 20px;
        border-radius: 50%;
        background: transparent;
        border: 1px solid transparent;
        cursor: pointer;
        transition:
            border-color 0.3s ease,
            transform 0.3s ease;
    }

    .service__dot::before {
        content: "";
        position: absolute;
        width: 16px;
        height: 16px;
        border-radius: 50%;
        background: #d9d9d9;
        transition:
            background-color 0.3s ease,
            transform 0.3s ease;
    }

    .service__dot-active,
    .service__dot:hover {
        border-color: var(--color-primary);
    }

    .service__dot-active::before,
    .service__dot:hover::before {
        background: var(--color-primary);
        transform: scale(0.8); /* Scale down the dot when active or hovered */
    }
}

